--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <a class="mdl-navigation__link" href="">News</a>
             <a class="mdl-navigation__link" href="">Team</a>
             <a class="mdl-navigation__link" href="">White Paper</a>
-            <a class="mdl-navigation__link" href="">Slack</a>
+            <a class="mdl-navigation__link" href="https://agnitgroup.slack.com">Slack</a>
           </nav>
         </div>
       </header>
