--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <div class="mdl-layout-spacer"></div>
           <!-- Navigation -->
           <nav class="mdl-navigation">
-            <a class="mdl-navigation__link" href="">News</a>
+            <a class="mdl-navigation__link" href="https://blockchainnew.herokuapp.com">Explore</a>
             <a class="mdl-navigation__link" href="">Team</a>
             <a class="mdl-navigation__link" href="">White Paper</a>
             <a class="mdl-navigation__link" href="https://agnitgroup.slack.com">Slack</a>
