--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html >
 <head>
   <meta charset="UTF-8">
-  <title>Material Design Lite components demo</title>
+  <title>Agnit - Bockchain Visual Analizer</title>
   
   
   
