--- a/index_backup.html
+++ b/index_backup.html
@@ -19,10 +19,11 @@
 <div class="navigation_mobile type1">
 	<a class="close_menu white"><i class="fa fa-close"></i></a>
 	<div class="padding_sides40 padding_top60 padding_bottom60 inner">
-		<div class="nav_logo white bottom30"><b>Agnit</b> Framework</div>
+		<div class="nav_logo white bottom30"><b>Startup</b> Framework</div>
 		<div><a href="#" class="raleway font22 link white bottom20">Home</a></div>
 		<div><a href="#" class="raleway font22 link white bottom20">Slack</a></div>
-		<div><a href="https://twitter.com/theagnit" class="raleway font22 link white bottom20">Twitter</a></div>
+		<div><a href="#" class="raleway font22 link white bottom20">Twitter</a></div>
+		<div><a href="#" class="raleway font22 link white bottom20">Pricing</a></div>
 		<div><a href="#" class="raleway font22 link white bottom40">Development</a></div>
 		
 		<div><a href="#" class="font16 link white opacity3 bottom15">Help</a></div>
@@ -60,7 +61,7 @@
 	</nav>
 
 	<div class="container nopadding">
-		<img src="i/agnit-logo.png" class="margin_auto top230 logo" alt="" width="150px" height="150px"/>
+		<img srcset="i/header_8_logo.png 1x, i/header_8_logo_2x.png 2x" src="i/header_8_logo.png" class="margin_auto top230 logo" alt="" />
 		<div class="text_center white font20 top20"><span class="semibold">Agnit</span> Fund</div>
 		<h1 class="text_center white semibold font92 top90">Invest together</h1>
 		<div class="top70 slider dots-90">
@@ -97,14 +98,105 @@
 </header>
 
 
+<!-- Content 30 -->
+
+<section class="content_30 padding_top100 padding_bottom70">
+	<div class="container nopadding">
+		<div class="flex justify_between">
+			<div class="max_width570 margin_auto bottom30 padding_sides40 padding_top40 padding_bottom30 radius8 block">
+				<img srcset="i/demo_images/content_30_foto1.jpg 1x, i/demo_images/content_30_foto1_2x.jpg 2x" src="i/demo_images/content_30_foto1.jpg" class="width70 height70 radius_full float_left top5" alt="" />
+				<div class="left100 inner">
+					<div class="font18 light dark_blue text">
+						"Extremely easy to use, helped us develop our Vote for George Washington micro-site extre- mely quickly! We will definitely use it again for other projects."
+					</div>
+					<div class="top25 font14 semibold uppercase dark_blue spacing15">Jasmine Andrews</div>
+					<div class="top5 font14 dark_blue opacity3">Microsoft</div>
+				</div>
+			</div>
+			<div class="max_width570 margin_auto bottom30 padding_sides40 padding_top40 padding_bottom30 radius8 block">
+				<img srcset="i/demo_images/content_30_foto2.jpg 1x, i/demo_images/content_30_foto2_2x.jpg 2x" src="i/demo_images/content_30_foto2.jpg" class="width70 height70 radius_full float_left top5" alt="" />
+				<div class="left100 inner">
+					<div class="font18 light dark_blue text">
+						"Worth every penny, if you have basic HTML knowledge. It helped us get an exceptional landing page up and running in no time."
+					</div>
+					<div class="top25 font14 semibold uppercase dark_blue spacing15">Austin Campbell</div>
+					<div class="top5 font14 dark_blue opacity3">Dropbox</div>
+				</div>
+			</div>
+			<div class="max_width570 margin_auto bottom30 padding_sides40 padding_top40 padding_bottom30 radius8 block">
+				<img srcset="i/demo_images/content_30_foto3.jpg 1x, i/demo_images/content_30_foto3_2x.jpg 2x" src="i/demo_images/content_30_foto3.jpg" class="width70 height70 radius_full float_left top5" alt="" />
+				<div class="left100 inner">
+					<div class="font18 light dark_blue text">
+						"I've built my website with Startup just in one day, and it was ready-to-go. Code is clean and simple, easy to use by people with almost any level of programming skills."
+					</div>
+					<div class="top25 font14 semibold uppercase dark_blue spacing15">Jennifer Otis</div>
+					<div class="top5 font14 dark_blue opacity3">Xcode</div>
+				</div>
+			</div>
+			<div class="max_width570 margin_auto bottom30 padding_sides40 padding_top40 padding_bottom30 radius8 block">
+				<img srcset="i/demo_images/content_30_foto4.jpg 1x, i/demo_images/content_30_foto4_2x.jpg 2x" src="i/demo_images/content_30_foto4.jpg" class="width70 height70 radius_full float_left top5" alt="" />
+				<div class="left100 inner">
+					<div class="font18 light dark_blue text">
+						As a business targeting high net worth individuals, we were looking for a slick, cool and minimalistic design for our website. The Slides framework checked all of those boxes and was quick, easy-to-use to get up and running in a short time
+					</div>
+					<div class="top25 font14 semibold uppercase dark_blue spacing15">Audrey Turner</div>
+					<div class="top5 font14 dark_blue opacity3">Apple</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</section>
+
+<!-- Team Advisors -->
+
+<section class="team_2 padding_top100 padding_bottom135">
+	<div class="container nopadding text_center white">
+		<h2 class="font42 raleway light">Our Crew</h2>
+		<div class="max_width770 margin_auto top35 font22 light hyphens text">
+			We are an investment firm focused on growing the blockchain industry through financial services, crypto technology, and blockchain expertise..
+		</div>
+		<div class="margin_auto top60 radius10 inner">
+			<div class="row">
+				<div class="col-sm-4 padding_top65 padding_bottom75 block">
+					<img srcset="i/demo_images/team_2_foto1.jpg 1x, i/demo_images/team_2_foto1_2x.jpg 2x" src="i/demo_images/team_2_foto1.jpg" class="radius_full" alt="" />
+					<div class="top30 font14 semibold uppercase spacing20 dark_blue title">Samantha Gimson</div>
+					<div class="top20 buttons">
+						<a href="#" class="font22 link medium_gray sides15"><i class="fa fa-twitter"></i></a>
+						<a href="#" class="font22 link medium_gray sides15"><i class="fa fa-facebook-square"></i></a>
+						<a href="#" class="font22 link medium_gray sides15"><i class="fa fa-dribbble"></i></a>
+					</div>
+				</div>
+				<div class="col-sm-4 padding_top65 padding_bottom75 block bordered">
+					<img srcset="i/demo_images/team_2_foto2.jpg 1x, i/demo_images/team_2_foto2_2x.jpg 2x" src="i/demo_images/team_2_foto2.jpg" class="radius_full" alt="" />
+					<div class="top30 font14 semibold uppercase spacing20 dark_blue title">Evan Barrington</div>
+					<div class="top20 buttons">
+						<a href="#" class="font22 link medium_gray sides15"><i class="fa fa-twitter"></i></a>
+						<a href="#" class="font22 link medium_gray sides15"><i class="fa fa-facebook-square"></i></a>
+						<a href="#" class="font22 link medium_gray sides15"><i class="fa fa-behance"></i></a>
+					</div>
+				</div>
+				<div class="col-sm-4 padding_top65 padding_bottom75 block">
+					<img srcset="i/demo_images/team_2_foto3.jpg 1x, i/demo_images/team_2_foto3_2x.jpg 2x" src="i/demo_images/team_2_foto3.jpg" class="radius_full" alt="" />
+					<div class="top30 font14 semibold uppercase spacing20 dark_blue title">Brian Oakman</div>
+					<div class="top20 buttons">
+						<a href="#" class="font22 link medium_gray sides15"><i class="fa fa-twitter"></i></a>
+						<a href="#" class="font22 link medium_gray sides15"><i class="fa fa-git"></i></a>
+					</div>
+				</div>
+			</div>
+		</div>
+		<a href="#" class="top50 btn size50 font16 transparent_green border border_green padding_left30 padding_right25">View our Crew <i class="fa fa-angle-right left10 font18"></i></a>		
+	</div>
+</section>
+
 
 <!-- Team Founders-->
 
 <section class="team_1 padding_top100 padding_bottom45">
 	<div class="container nopadding text_center dark_gray">
-		<h2 class="font42 raleway light">Our Team</h2>
+		<h2 class="font42 raleway light">Our Advisory Team</h2>
 		<div class="max_width770 margin_auto top35 font22 light dark_blue hyphens text">
-			We have created a new entity that will help all types of investors.
+			We have created a new product that will help designers, developers and companies create websites for their startups quickly and easily.
 		</div>
 		<a href="#" class="top55 btn size40 font12 semibold uppercase spacing20 red padding_sides35">Join our team</a>
 		<div class="top65 flex justify_between inner">
@@ -113,11 +205,14 @@
 				<div class="top25 font22 light title">Vanessa Laird</div>
 				<div class="top15 font12 semibold uppercase spacing20 dark_blue">Managing Partner</div>
 				<div class="top45 block_socials clearfix">
-					<div class="col-xs-6 border_right">
+					<div class="col-xs-4 border_right">
 						<a href="#" class="link font22 line_height60 medium_gray"><i class="fa fa-twitter"></i></a>
 					</div>
-					<div class="col-xs-6 border_right">
-						<a href="#" class="link font22 line_height60 medium_gray"><i class="fa fa-linkedin"></i></a>
+					<div class="col-xs-4 border_right">
+						<a href="#" class="link font22 line_height60 medium_gray"><i class="fa fa-facebook-square"></i></a>
+					</div>
+					<div class="col-xs-4">
+						<a href="#" class="link font22 line_height60 medium_gray"><i class="fa fa-dribbble"></i></a>
 					</div>
 				</div>
 			</div>
@@ -126,11 +221,14 @@
 				<div class="top25 font22 light title">Mason Campbell</div>
 				<div class="top15 font12 semibold uppercase spacing20 dark_blue">Operating Partner</div>
 				<div class="top45 block_socials clearfix">
-					<div class="col-xs-6 border_right">
+					<div class="col-xs-4 border_right">
 						<a href="#" class="link font22 line_height60 medium_gray"><i class="fa fa-twitter"></i></a>
 					</div>
-					<div class="col-xs-6 border_right">
-						<a href="#" class="link font22 line_height60 medium_gray"><i class="fa fa-linkedin"></i></a>
+					<div class="col-xs-4 border_right">
+						<a href="#" class="link font22 line_height60 medium_gray"><i class="fa fa-facebook-square"></i></a>
+					</div>
+					<div class="col-xs-4">
+						<a href="#" class="link font22 line_height60 medium_gray"><i class="fa fa-dribbble"></i></a>
 					</div>
 				</div>
 			</div>
@@ -139,11 +237,14 @@
 				<div class="top25 font22 light title">Irea Evans</div>
 				<div class="top15 font12 semibold uppercase spacing20 dark_blue">CTO</div>
 				<div class="top45 block_socials clearfix">
-					<div class="col-xs-6 border_right">
+					<div class="col-xs-4 border_right">
 						<a href="#" class="link font22 line_height60 medium_gray"><i class="fa fa-twitter"></i></a>
 					</div>
-					<div class="col-xs-6 border_right">
-						<a href="#" class="link font22 line_height60 medium_gray"><i class="fa fa-linkedin"></i></a>
+					<div class="col-xs-4 border_right">
+						<a href="#" class="link font22 line_height60 medium_gray"><i class="fa fa-facebook-square"></i></a>
+					</div>
+					<div class="col-xs-4">
+						<a href="#" class="link font22 line_height60 medium_gray"><i class="fa fa-dribbble"></i></a>
 					</div>
 				</div>
 			</div>
@@ -191,8 +292,16 @@
 			</div>
 			<a href="tel:+15554443322" class="top40 link dark_blue raleway font18 semibold"><i class="fa fa-phone right15"></i>+1 555 444 33 22</a>
 			<div class="clearfix"></div>
-			<a href="mailto:info@agnit.com" class="top10 link dark_blue raleway font18 semibold"><i class="fa fa-envelope right15"></i>info@agnit.com</a>
+			<a href="mailto:info@designmodo.com" class="top10 link dark_blue raleway font18 semibold"><i class="fa fa-envelope right15"></i>info@agnit.com</a>
 			<div class="top50 hr width_full height1 light_gray"></div>
+			<div class="top40 bottom25 font28 raleway light dark_gray">We are on Socials</div>
+			<div class="float_left width200 block_links">
+				<a href="#" target="_blank" class="bottom10 font18 light link medium_gray"><i class="fa fa-facebook-official width20 right15"></i>Facebook</a>
+				<div class="clearfix"></div>
+				<a href="#" target="_blank" class="bottom10 font18 light link medium_gray"><i class="fa fa-twitter width20 right15"></i>Twitter</a>
+				<div class="clearfix"></div>
+				<a href="#" target="_blank" class="bottom10 font18 light link medium_gray"><i class="fa fa-pinterest width20 right15"></i>Pinterest</a>
+			</div>
 			<div class="float_left width200 block_links">
 				<a href="#" target="_blank" class="bottom10 font18 light link medium_gray"><i class="fa fa-dribbble width20 right15"></i>Dribbble</a>
 				<div class="clearfix"></div>
@@ -212,11 +321,11 @@
 
 <section class="call_to_action_4 padding_top140 padding_bottom115">
 	<div class="container nopadding max_width970 text_center white">
-		<h2 class="font62 raleway light">Start Investing Today</h2>
+		<h2 class="font62 raleway light">Start Investing Right Now</h2>
 		<div class="max_width570 margin_auto top30 font22 light opacity7 text">
-			A high-quality digital solution for those who want a highest level of security and service. 
+			A high-quality solution for those who want a beautiful startup website quickly.
 		</div>
-		<a href="#" class="top60 btn size80 blue font18 padding_sides50">Get In Touch</a>
+		<a href="#" class="top60 btn size80 blue font18 padding_sides50">Get Started for $249</a>
 	</div>
 </section>
 
@@ -225,14 +334,23 @@
 <footer class="footer_1 padding_top75 padding_bottom70">
 	<div class="container nopadding">
 		<div class="flex justify_between inner">
+			<div class="block block_left">
+				<a href="#" class="font12 semibold uppercase spacing15 link dark_blue right30">About</a>
+				<a href="#" class="font12 semibold uppercase spacing15 link dark_blue right30">Policy</a>
+				<a href="#" class="font12 semibold uppercase spacing15 link dark_blue right30">Terms</a>
+			</div>
 			<div class="block block_center text_center">
 				<div class="font20 raleway dark_blue"><b>Agnit</b> Fund</div>
 			</div>
-			<div class="block block_center text_center">
-				<a href="https://twitter.com/theagnit" class="font18 semibold uppercase spacing15 link dark_blue left30"><i class="fa fa-twitter"></i></a>
-				<a href="#" class="font18 semibold uppercase spacing15 link dark_blue left30"><i class="fa fa-slack"></i></a>
-				<a href="#" class="font18 semibold uppercase spacing15 link dark_blue left30"><i class="fa fa-linkedin"></i></a>
+			<div class="block block_right text_right">
+				<a href="#" class="font12 semibold uppercase spacing15 link dark_blue left30">Contacts</a>
+				<a href="#" class="font18 semibold uppercase spacing15 link dark_blue left30"><i class="fa fa-twitter"></i></a>
+				<a href="#" class="font18 semibold uppercase spacing15 link dark_blue left30"><i class="fa fa-facebook-square"></i></a>
+				<a href="#" class="font18 semibold uppercase spacing15 link dark_blue left30"><i class="fa fa-google-plus"></i></a>
 			</div>
+		</div>
+		<div class="margin_auto top20 max_width370 font16 light medium_gray text_center">
+			Be sure to take a look at our <a href="#" class="link medium_gray underline">Terms of Use</a> and <a href="#" class="link medium_gray underline">Privacy Policy</a>
 		</div>
 	</div>
 </footer>
